// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level component should concat classname in props with Bulma classname 1`] = `
<nav
  className="level other-class this-is-a-test"
>
  <p>
    Default
  </p>
</nav>
`;

exports[`Level component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Item": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "div",
    },
    "render": [Function],
  },
  "Side": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "align": "left",
      "as": "div",
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "as": "nav",
  },
  "render": [Function],
}
`;

exports[`Level component should expose Level Side and Item 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "align": "left",
    "as": "div",
  },
  "render": [Function],
}
`;

exports[`Level component should expose Level Side and Item 2`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "div",
  },
  "render": [Function],
}
`;

exports[`Level component should have level classname 1`] = `
<nav
  className="level"
>
  <div
    className="level-item"
  >
    Item 1
  </div>
  <div
    className="level-item"
  >
    Item 2
  </div>
  <div
    className="level-item"
  >
    Item 3
  </div>
</nav>
`;

exports[`Level component should render Levels with right and left side 1`] = `
<nav
  className="level"
>
  <div
    className="level-left"
  >
    <div
      className="level-item"
    >
      Item 1
    </div>
    <div
      className="level-item"
    >
      Item 2
    </div>
  </div>
  <div
    className="level-right"
  >
    <div
      className="level-item"
    >
      Item 3
    </div>
  </div>
</nav>
`;

exports[`Level component should use inline styles 1`] = `
<nav
  className="level"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</nav>
`;
